<resources>
    <string name="app_name">NotesApp</string>
    <string name="your_notes">Your Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note here</string>
    <string name="delete">Delete</string>
    <string name="delete_note">DELETE NOTE</string>
    <string name="cancel">CANCEL</string>
    <string name="ConfirmationNote">Are you sure want to delete this note?</string>
    <string name="DeleteNoteText">Delete Note</string>
</resources>