<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MoreOptions"
    android:background="@drawable/background_misc"
    android:layout_margin="10dp"
    android:layout_gravity="center"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/DeleteNoteImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_bin"
        android:tint="@color/colorWhite"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/DeleteNoteText"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/DeleteNoteImage"
        app:layout_constraintStart_toEndOf="@id/DeleteNoteImage"
        app:layout_constraintTop_toTopOf="@id/DeleteNoteImage"
         />


    <TextView
        android:id="@+id/DeleteConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:text="@string/ConfirmationNote"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/DeleteNoteImage"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/DeleteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="10dp"
        android:textColor="@color/colorDelete"
        android:text="@string/delete_note"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DeleteConfirmation"/>

    <TextView
        android:id="@+id/CancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:text="@string/cancel"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:layout_margin="8dp"
       app:layout_constraintEnd_toStartOf="@id/DeleteText"
        app:layout_constraintTop_toBottomOf="@id/DeleteConfirmation"/>


</androidx.constraintlayout.widget.ConstraintLayout>