<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/yourNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12sp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/your_notes"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutSearchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/yourNotes">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_search"
        android:tint="@color/colorSearchIcon"/>
        
    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/search_notes"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/LayoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearchText"/>


    <LinearLayout
        android:id="@+id/LayoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageView
            android:id="@+id/ImageNoteAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_note"
            android:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/ImageAdd"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/ImageNoteAddMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:tint="@color/colorPrimary"
        android:src="@drawable/ic_add_note"
        app:layout_constraintBottom_toTopOf="@id/LayoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/LayoutQuickActions"

        />



</androidx.constraintlayout.widget.ConstraintLayout>



